# specforge

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix
examples/todo/: spec.md
prompts/: assist-expand-system.md  code-change-agent-system.md  development-agent-system.md  init-spec-system.md  sync-spec-system.md
src/: assist.rs  config.rs  context.rs  diff.rs  init.rs  lib.rs  main.rs  profiles.rs  prompts.rs  provider.rs  spec.rs  state.rs  sync.rs
src/agent/: checks.rs  mod.rs  patch.rs  path_policy.rs  project_files.rs  task_store.rs  tools.rs
src/agents/: config.rs  factory.rs  mod.rs
src/cli/: args.rs  color.rs  commands.rs  diff_render.rs  mod.rs  tui.rs
src/integrations/: mcp.rs
src/llm/: generated_text.rs  mod.rs  text.rs
src/llm/tool_agent/: config.rs  factory.rs  mod.rs  response.rs  runtime.rs
