[package]
name = "specforge"
version = "0.1.0-pre"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.0"
rig = "0.38.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
